# ComfyUI-Florence2-Vision

./: README.md  nodes.py  pyproject.toml  requirements.txt
examples/: florence2+sam2-api.json  florence2-api.json  sam2+sd+flor2-api.json  sam2+sd+flor2.json
